update(falco)!: auditLog is now supported via k8saudit plugin
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/templates/auditsink.yaml
+++ b/falco/templates/auditsink.yaml
@@ -21,10 +21,10 @@ spec:
       service:
         namespace: {{ .Release.Namespace }}
         name: {{ template "falco.fullname" . }}
-        port: {{ .Values.falco.webserver.listenPort }}
-        path: {{ .Values.falco.webserver.k8sAuditEndpoint }}
+        port: {{ .Values.auditLog.listenPort }}
+        path: {{ .Values.auditLog.k8sAuditEndpoint }}
       {{- end }}
-      {{- if .Values.falco.webserver.sslEnabled }}
+      {{- if .Values.auditLog.sslEnabled }}
       caBundle: {{ .Values.certs.ca.crt | b64enc | quote }}
       {{- end}}
 {{- end }}
