--- a/falco/templates/service.yaml
+++ b/falco/templates/service.yaml
@@ -10,15 +10,15 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  {{- if .Values.falco.webserver.nodePort }}
+  {{- if .Values.auditLog.nodePort }}
   type: NodePort
   {{- end }}
   selector:
     app: {{ template "falco.fullname" .}}
   ports:
   - protocol: TCP
-    port: {{ .Values.falco.webserver.listenPort }}
-    {{- with .Values.falco.webserver.nodePort }}
+    port: {{ .Values.auditLog.listenPort }}
+    {{- with .Values.auditLog.nodePort }}
     nodePort: {{ . }}
     {{- end }}
 {{- end }}
