--- a/falco/templates/secret-certs.yaml
+++ b/falco/templates/secret-certs.yaml
@@ -16,6 +16,6 @@ data:
   server.key: {{ $key | b64enc | quote }}
   {{ $crt := .Values.certs.server.crt }}
   server.crt: {{ $crt | b64enc | quote }}
-  server.pem: {{ print $key $crt | b64enc | quote }}
+  falco.pem: {{ print $key $crt | b64enc | quote }}
   ca.crt: {{ .Values.certs.ca.crt | b64enc | quote }}
 {{- end }}
